--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,6 +35,7 @@ stages:
         repository: $(imageRepository)
         dockerfile: $(dockerfilePath)
         containerRegistry: $(dockerRegistryServiceConnection)
+        buildContext: $(Build.SourcesDirectory)
         tags: |
           $(tag)
         arguments: '--build-arg GOLANG_VERSION=1.17 --build-arg GOTENBERG_VERSION=7 --build-arg GOTENBERG_USER_GID=1001 --build-arg GOTENBERG_USER_UID=1001 --build-arg NOTO_COLOR_EMOJI_VERSION=v2.034 --build-arg  PDFTK_VERSION=v3.3.2'
